style/css/screen.css
body {
  background-color: #FFFFFF;
  background-image: url(../../adesign.jpg);
  font-family: Gilroy-ExtraBold;
}

.container {
  width: 1150px;
  margin: 0 auto;
}

#top-image {
  position: absolute;
  background-image: url(../img/top-image.jpg);
  width: 739px;
  height: 679px;
  left: 361px;
}

#menu {
  position: fixed;
  left: 0;
  right: 0;
  top: 16px;
  max-width: 1000px;
  margin: 0 auto;
  padding: 5px 50px 5px 10px;
  z-index: 300;
  background-color:rgba(255,255,255,0.5);
}

a.pure-menu-heading {
  padding-right: 350px;
  background-image: url(../img/logo.png);
  background-repeat: no-repeat;
  background-size: contain;
  overflow: visible;
  height: 40px;
}
.pure-menu-item a {
  padding: 5px 14px;
}
.pure-menu-item.active a {
  background-color: #FEE734;
  padding: 5px 20px;
}

#menu a {
  font-family: Gilroy-ExtraBold;
  font-weight: normal;
  font-style: normal;
  font-size: 16px;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  color: #000;
}

#section-1 {
  height: 681px;
}

#art {
  background-image: url(../img/bandb-art.png);
  background-repeat: no-repeat;
  background-size: contain;
}

#section-1 .heading-text {
  margin-top: 416px;
  margin-bottom: 35px;
}

.heading-text {
  font-size: 69px;
  line-height: 0.85;
  letter-spacing: 0;
}

#section-1 p {
  position: relative;
  left: -50px;
  top: -50px;
}

.text {
  font-size: 18px;
  letter-spacing: -0.01em;
  line-height: 1.11;
  margin-top: 0;
  margin-bottom: 28px;
  font-family: Poppins;
}

#section-1 .cta a {
  font-size: 18px;
  letter-spacing: 0.025em;
  text-transform: uppercase;
  color: #000;
  padding-bottom: 0px;
  text-decoration: none;
  border-bottom: 1px solid #000;
  letter-spacing: 0.04em;
}

#section-2 {
  background:
    url(../img/walk-up.png)
    top left
    no-repeat
    #FEE740;
  margin-top: 179px;
  padding: 175px 0 100px 0;
}
#section-2 .heading-text {
  margin: 0 0 40px 10px;
}
#section-2 #hot {
  position: relative;
  top: -225px;
  height: 100px;
}
#section-2 #good-job {
  position: relative;
  left: -50px;
}
#section-2 .testimonial {
  font-family: "Playfair Display";
  font-size: 25px;
  letter-spacing: 0;
  line-height: 1.3;
  padding: 0 50px 0 0;
}
#section-2 .item {
  margin: 25px 0;
}
#section-2-slider {
  background:
    url(../img/slide-down.png)
    bottom left
    no-repeat
    #FEE740;
  height: 79px;
  padding-top: 50px;
}

#section-3 {
}
#section-3 #planet {
  position: relative;
  top: -200px;
  left: -50px;
}
#section-3 .heading-text {
  margin: 320px 0 0 120px;
}
#section-3 .text {
  margin: 25px 75px 0 120px;
}
#section-3 .client-list {
  padding: 0 50px;
  position: relative;
  top: -90px;
}
#section-3 img.logo {
  display: inline;
  vertical-align: middle;
  padding: 0 50px;
}

.source {
  font-family: Gilroy-ExtraBold;
  font-size: 17px;
  line-height: 0.3em;
}
.source .name {
  text-transform: uppercase;
}
.source.right-align {
  text-align: right;
  margin: 40px 25px 0 0;
}
.source.left-align {
  margin: 35px 0 0 50px;
}

#footer {
  background:
    url(../img/black-walk-up.png)
    top left
    no-repeat
    #000;
  padding: 150px 0;
  color: #fff;
  font-family: Gilroy-ExtraBold;
  font-weight: normal;
  font-style: normal;
  font-size: 86px;
}
#footer .cta-button {
  background-color: #FDE740;
  padding: 20px 60px;
  color: #000;
  font-size: 34px;
  text-transform: uppercase;
  text-decoration: none;
}
#footer .center {
  text-align: center;
  max-width: 800px;
  margin: auto;
}
#footer p {
  margin: 0;
}

.Gilroy-ExtraBold {
  font-family: Gilroy-ExtraBold;
  font-weight: normal;
  font-style: normal;
}

